Share the Windows OS layer between the backends and fix the FFM process lookup (#3568)
* Share the Windows version parsing and fix the FFM process lookup

Hoist queryFamilyVersionInfo into the common WindowsOperatingSystem base
behind an abstract queryOsVersion() hook, splitting the parsing from the
acquisition so parseVersionInfo and resolveVersionAlias can be unit tested
on any platform rather than only under Windows CI. This also settles two
differences between the twins: JNA compared the service pack against
Constants.UNKNOWN while FFM used a "unknown" string literal, and JNA
widened queryFamilyVersionInfo to public.

Fix WindowsOperatingSystemFFM.processMapToList keying an explicit pid
request off the perf counter map alone. That map is memoized, so it can
still name a process that has exited, and WindowsOSProcess tolerates a
null WtsInfo; the caller got a process reporting RUNNING with no path, no
threads and no CPU time, and getProcess(pid) could return a process that
getProcesses() would not list. Intersect with the freshly queried WTS
keys whether or not pids were requested, matching the JNA backend.

Add WindowsForeignFunctions.succeededOrLog to replace the repeated
"log GetLastError and bail" guard, which also fixes five FFM call sites
logging the OptionalInt wrapper instead of the error code.

Add WindowsOperatingSystemJNATest mirroring the FFM backend's test, and
move WindowsOperatingSystemFFMTest into the package of the class under
test. Drop the FFM copy of USE_PROCSTATE_SUSPENDED, which shadowed the
identical constant it inherits.

* Share the Windows process map plumbing between the backends

processMapToList was identical in both backends apart from the driver
class names, which is how the two came to disagree on how an explicit pid
request is filtered. Move it, the four memoized perf counter suppliers,
and the five process query methods into the common WindowsOperatingSystem
base so there is one implementation to keep correct.

Each backend now su